test/fail/Issue1251.agda
open import Issue1251.NonTerminating
